--- a/index.html
+++ b/index.html
@@ -29,86 +29,125 @@
     <div class="fan_register">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-sm-12 col-lg-7 col-12">
-                    <div class="account_tab text-center">
-                        <ul class="nav nav-tabs" id="myTab" role="tablist">
-                            <li class="nav-item">
-                                <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">sign in</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">sign up</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="tab-content mt-30" id="myTabContent">
-                        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                            <div class="sign_in text-center">
-                                <form action="">
-                                    <div class="row">
-                                        <div class="col-sm-12">
-                                            <input type="email" placeholder="email address" class="form-control">
-                                        </div>
-                                        <div class="col-sm-12">
-                                            <input type="text" placeholder="password" class="form-control">
-                                        </div>
-                                        <div class="col-12">
-                                            <div class="button text-center mt-20">
-                                                <a href="#" class="btn">login</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
+                <div class="col-sm-12 col-lg-8 col-12">
+                    <div class="form">
+                        <div class="account_tab text-center">
+                            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">sign in</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">sign up</a>
+                                </li>
+                            </ul>
                         </div>
-                        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                            <div class="sign_up">
-                                <form action="">
-                                    <div class="row">
-                                        <div class="col-sm-6">
-                                            <input type="text" placeholder="first name" class="form-control">
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <input type="text" placeholder="last name" class="form-control">
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <input type="text" placeholder="user name" class="form-control">
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <input type="email" placeholder="email address" class="form-control">
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <select name="" id="" class="form-control">
-                                                <option value="">male</option>
-                                                <option value="">female</option>
-                                            </select>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <select name="" id="" class="form-control">
-                                                <option value="">united states of america</option>
-                                                <option value="">united kingdom</option>
-                                                <option value="">argentina</option>
-                                            </select>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <input type="text" placeholder="password" class="form-control">
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <input type="text" placeholder="confirm password" class="form-control">
-                                        </div>
-                                        <div class="col-sm-12 text-center">
-                                            <label for="">profile picture (optional)</label>
-                                            <div class="upload">
-                                                <input type="file" id="file" class="file">
-                                                <span id="filename"></span>
-                                            </div>
-                                        </div>
-                                        <div class="col-12">
-                                            <div class="button text-center mt-20">
-                                                <a href="#" class="btn">create your account</a>
+                        <div class="tab-content mt-30" id="myTabContent">
+                            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                                <div class="sign_in text-center">
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-8 col-md-10">
+                                            <form action="">
+                                                <div class="row">
+                                                    <div class="col-sm-12">
+                                                        <input type="email" placeholder="email address" class="form-control">
+                                                    </div>
+                                                    <div class="col-sm-12">
+                                                        <input type="text" placeholder="password" class="form-control">
+                                                    </div>
+                                                    <div class="col-12">
+                                                        <div class="button text-center mt-10">
+                                                            <a href="#" class="btn">login</a>
+                                                            <p><a href="#">forgot password?</a></p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </form>
+                                            <div class="fan_benefits text-left pt-30">
+                                                <h3>fan benefits</h3>
+                                                <ul>
+                                                    <li>
+                                                        view exclusive content
+                                                    </li>
+                                                    <li>
+                                                        monthly and yearly subscription
+                                                    </li>
+                                                    <li>
+                                                        monthly and yearly subscription
+                                                    </li>
+                                                    <li>
+                                                        monthly and yearly subscription
+                                                    </li>
+                                                    <li>
+                                                        monthly and yearly subscription
+                                                    </li>
+                                                    <li>
+                                                        monthly and yearly subscription
+                                                    </li>
+                                                    <li>
+                                                        monthly and yearly subscription
+                                                    </li>
+                                                    <li>
+                                                        monthly and yearly subscription
+                                                    </li>
+                                                </ul>
+                                                <div class="fan_button">
+                                                    <p>not register yet? <a href="#">signup now.</a></p>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                </form>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                                <div class="sign_up">
+                                    <form action="">
+                                        <div class="row">
+                                            <div class="col-sm-6">
+                                                <input type="text" placeholder="first name" class="form-control">
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <input type="text" placeholder="last name" class="form-control">
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <input type="text" placeholder="user name" class="form-control">
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <input type="email" placeholder="email address" class="form-control">
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <select name="" id="" class="form-control">
+                                                    <option value="">male</option>
+                                                    <option value="">female</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <select name="" id="" class="form-control">
+                                                    <option value="">united states of america</option>
+                                                    <option value="">united kingdom</option>
+                                                    <option value="">argentina</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <input type="text" placeholder="password" class="form-control">
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <input type="text" placeholder="confirm password" class="form-control">
+                                            </div>
+                                            <div class="col-sm-12 text-center">
+                                                <label for="">profile picture (optional)</label>
+                                                <div class="upload">
+                                                    <input type="file" id="file" class="file">
+                                                    <span id="filename"></span>
+                                                </div>
+                                            </div>
+                                            <div class="col-12">
+                                                <div class="button text-center mt-20">
+                                                    <a href="#" class="btn">create your account</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
